# OpenGLProject

./: CMakeLists.txt  main.cpp
lib/: box.glsl  cross.glsl  myshaderfunctions.glsl  noise.glsl  random.glsl  random2d.glsl  smooth_time.glsl
shaders/: black_hole_shader_pixelated.frag  preview_template copy.glsl  preview_template.glsl
shaders/?/: bookofshaders_preview.glsl  example.glsl  threads_shader.glsl
shaders/bookofshaders/: bookofshadersnoise_preview.glsl
shaders/gradient/: gradient.glsl  gradient_preview.glsl
shaders/noise/fractal_brownian_motion/: fbm_1.glsl  fbm_2.glsl  preview_fractal_brownian_motion_1.glsl  preview_fractal_brownian_motion_2.glsl
shaders/yinyang/: yinyang.glsl  yinyang2.glsl  yinyang2_preview.glsl  yinyang_preview.glsl
